--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,18 @@
-* {
-  border: 0;
-  margin: 0;
-  padding: 0;
-  font-size: 100%;
-  box-sizing: border-box;
+#result {
+  display: none;
+}
+
+.container {
+  text-align: center;
+}
+
+.jumbotron {
+  border-radius: 10px;
+  margin-top: 50px;
+}
+
+#conversionResult {
+  font-weight: bold;
+  color: blue;
+  font-style: italic;
 }
